--- a/Depo/Depo/Presentation/CollectionViewCells/AllFilesTypeCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/AllFilesTypeCollectionViewCell.xib
@@ -4,8 +4,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -43,7 +43,7 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" name="filesTypesBackground"/>
                                 <constraints>
                                     <constraint firstItem="yGP-c1-Ddb" firstAttribute="centerY" secondItem="CcS-v7-mWg" secondAttribute="centerY" id="L9m-it-OAn"/>
                                     <constraint firstAttribute="trailing" secondItem="yGP-c1-Ddb" secondAttribute="trailing" constant="8" id="fP3-3p-OIQ"/>
@@ -80,8 +80,8 @@
     </objects>
     <resources>
         <image name="iconTabMusic" width="26" height="26"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="filesTypesBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
