--- a/Depo/Depo/Presentation/SubViews/SharedItemsSegmentView/SharedItemsSegmentView.xib
+++ b/Depo/Depo/Presentation/SubViews/SharedItemsSegmentView/SharedItemsSegmentView.xib
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -39,7 +38,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="RCZ-wc-Vqv" firstAttribute="leading" secondItem="1G8-Ge-siI" secondAttribute="leading" id="Cng-H9-fFY"/>
                         <constraint firstAttribute="bottom" secondItem="YcV-F6-yfh" secondAttribute="bottom" constant="3" id="GWl-xB-UKu"/>
@@ -52,7 +51,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="D8s-X4-dP6"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="1G8-Ge-siI" firstAttribute="top" secondItem="bBl-Dk-4rf" secondAttribute="top" id="Fo8-w8-Rul"/>
                 <constraint firstItem="1G8-Ge-siI" firstAttribute="leading" secondItem="bBl-Dk-4rf" secondAttribute="leading" id="KFT-8F-gfX"/>
@@ -70,8 +69,5 @@
         <namedColor name="filesSeperator">
             <color red="0.92156862745098034" green="0.92549019607843142" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
