--- a/Depo/Depo/Presentation/CollectionViewCells/CollectionViewCellForPhoto.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/CollectionViewCellForPhoto.xib
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCellForPhoto" id="gTV-IL-0wX" customClass="CollectionViewCellForPhoto" customModule="lifebox" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCellForPhoto" id="gTV-IL-0wX" customClass="CollectionViewCellForPhoto" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -33,10 +31,10 @@
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0of-UX-nI8">
-                        <rect key="frame" x="63" y="5" width="22" height="22"/>
+                        <rect key="frame" x="58" y="8" width="24" height="24"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="22" id="UtN-S5-F0O"/>
-                            <constraint firstAttribute="height" constant="22" id="l11-0Q-Alb"/>
+                            <constraint firstAttribute="width" constant="24" id="UtN-S5-F0O"/>
+                            <constraint firstAttribute="height" constant="24" id="l11-0Q-Alb"/>
                         </constraints>
                     </imageView>
                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qHk-K2-jJ1">
@@ -63,13 +61,13 @@
                 <constraint firstItem="kwv-1p-nO6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="6" id="3HP-DR-B2Y"/>
                 <constraint firstAttribute="trailing" secondItem="Lqt-0c-t0J" secondAttribute="trailing" id="8uz-yU-7hi"/>
                 <constraint firstItem="Lqt-0c-t0J" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="EHS-nI-eXc"/>
-                <constraint firstItem="0of-UX-nI8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="Gyk-ZW-aZt"/>
+                <constraint firstItem="0of-UX-nI8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="Gyk-ZW-aZt"/>
                 <constraint firstAttribute="trailing" secondItem="2VJ-2A-pkc" secondAttribute="trailing" id="JQl-7s-hpC"/>
                 <constraint firstItem="2VJ-2A-pkc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="KUi-UH-YCM"/>
                 <constraint firstAttribute="bottom" secondItem="Lqt-0c-t0J" secondAttribute="bottom" id="LXu-mP-530"/>
                 <constraint firstAttribute="trailing" secondItem="IQc-XA-IIn" secondAttribute="trailing" constant="8" id="MZb-aF-pIR"/>
                 <constraint firstItem="qHk-K2-jJ1" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="NdH-rX-Hm8"/>
-                <constraint firstAttribute="trailing" secondItem="0of-UX-nI8" secondAttribute="trailing" constant="5" id="PfD-53-IAa"/>
+                <constraint firstAttribute="trailing" secondItem="0of-UX-nI8" secondAttribute="trailing" constant="8" id="PfD-53-IAa"/>
                 <constraint firstItem="kwv-1p-nO6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="Pzt-C4-zdu"/>
                 <constraint firstItem="Lqt-0c-t0J" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="RlI-z4-WD1"/>
                 <constraint firstAttribute="bottom" secondItem="XJs-Ot-0Kd" secondAttribute="bottom" constant="2" id="Zey-ez-MkW"/>
