--- a/Depo/Depo/Presentation/SubViews/PremiumView/PremiumHeaderView/PremiumHeaderView.xib
+++ b/Depo/Depo/Presentation/SubViews/PremiumView/PremiumHeaderView/PremiumHeaderView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,17 +20,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="425" height="238"/>
+            <rect key="frame" x="0.0" y="0.0" width="425" height="344"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="365" placeholderIntrinsicHeight="96.5" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Bik-Sb-QC8">
-                    <rect key="frame" x="95.5" y="28" width="234" height="96.5"/>
+                    <rect key="frame" x="42.5" y="48" width="340" height="96.5"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" image="crownPremiumIcon" translatesAutoresizingMaskIntoConstraints="NO" id="RoT-OR-WaV">
-                            <rect key="frame" x="0.0" y="0.0" width="234" height="56"/>
+                            <rect key="frame" x="0.0" y="0.0" width="340" height="56"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avN-tS-i1m">
-                            <rect key="frame" x="0.0" y="76" width="234" height="20.5"/>
+                            <rect key="frame" x="0.0" y="76" width="340" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -38,7 +38,7 @@
                     </subviews>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqA-pM-aag" customClass="GradientPremiumButton" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="122" y="148.5" width="181" height="45"/>
+                    <rect key="frame" x="122" y="168.5" width="181" height="45"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="PgF-1Q-ewL"/>
                     </constraints>
@@ -48,7 +48,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TDl-wk-WqG">
-                    <rect key="frame" x="95.5" y="217.5" width="234" height="20.5"/>
+                    <rect key="frame" x="95.5" y="237.5" width="234" height="106.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -59,12 +59,12 @@
             <constraints>
                 <constraint firstItem="TDl-wk-WqG" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" priority="750" constant="30" id="1A7-7X-iZT"/>
                 <constraint firstItem="eqA-pM-aag" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="Ezt-iL-xj0"/>
-                <constraint firstItem="Bik-Sb-QC8" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" priority="750" constant="30" id="GYD-0f-lX9"/>
+                <constraint firstItem="Bik-Sb-QC8" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" priority="750" constant="16" id="GYD-0f-lX9"/>
                 <constraint firstItem="TDl-wk-WqG" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.85" id="JHl-7K-AVH"/>
-                <constraint firstItem="Bik-Sb-QC8" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.55" id="LV1-nS-HfV"/>
+                <constraint firstItem="Bik-Sb-QC8" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.8" id="LV1-nS-HfV"/>
                 <constraint firstItem="Bik-Sb-QC8" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="28" id="PMq-tc-vQv"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="TDl-wk-WqG" secondAttribute="trailing" priority="750" constant="30" id="TNo-zM-7FG"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Bik-Sb-QC8" secondAttribute="trailing" priority="750" constant="30" id="Z6A-dE-vss"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Bik-Sb-QC8" secondAttribute="trailing" priority="750" constant="16" id="Z6A-dE-vss"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="TDl-wk-WqG" secondAttribute="bottom" id="cEF-fd-dE3"/>
                 <constraint firstItem="TDl-wk-WqG" firstAttribute="top" secondItem="eqA-pM-aag" secondAttribute="bottom" constant="24" id="cL6-G5-IPx"/>
                 <constraint firstItem="Bik-Sb-QC8" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="cOo-qn-VCQ"/>
@@ -90,7 +90,7 @@
                     <include reference="x2v-qc-Kqj"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="125.59999999999999" y="-147.07646176911544"/>
+            <point key="canvasLocation" x="125.390625" y="-116.60156249999999"/>
         </view>
     </objects>
     <resources>
